# fopis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.conf.in
include/: dataio.hpp  environment.hpp  field.hpp  global.hpp  grid.hpp  initialize.hpp  mpi_wrapper.hpp  mpiw.hpp  normalizer.hpp  particle.hpp  particle_type.hpp  position.hpp  random_distribution.hpp  spacecraft.hpp  tdpic.h  tdpic_configure.h.in  utils.hpp  write_hdf5.hpp
include/Spacecraft/: Cmatrix.hpp  Incident.hpp  Material.hpp
input_samples/: injection_management_sample.json  input.json  input_emission_sample.json  pbs_job.sh  pbs_job_b.sh  photoelectron_and_secondary.json
plotscripts/: energy.plt  energy.pvsm  energy_current_particle_test.plt  energy_distribution.plt  inject_energy.plt  object.plt  object_force.plt  object_potential.plt  potential_and_density.pvsm  template.plt
scripts/: HDF5config.cmake  build-VS2017-64.bat  gdb_mpirun.sh  lldb_mpirun.sh  pbs_job.sh.sample  setup-on-craype.sh  setup-on-local-unix.sh  setup.sh
src/: 2dpic.cpp  2dpic.h  dataio.cpp  dataio.hpp  environment.cpp  environment.hpp  field.cpp  field.hpp  global.hpp  grid.cpp  grid.hpp  grid_particle.cpp  initialize.cpp  input.json  input.json.sample  main.cpp  mpi.cpp  mpiw.cpp  mpiw.hpp  normalizer.cpp  normalizer.hpp  particle.cpp  particle.hpp  particleType.cpp  position.cpp  position.hpp  spacecraft.cpp  spacecraft.hpp  tdpic.h  utils.cpp  utils.hpp  velocity.cpp
src/Grid/: ChildGrid.cpp  Field.cpp  Grid.cpp  GridChildrenTreatment.cpp  GridIOTreatment.cpp  GridParticleTreatment.cpp  GridParticleTreatmentEM.cpp  GridParticleTreatmentES.cpp  RootGrid.cpp
src/Grid/RootGrid/: RootGrid.cpp  RootGridField.cpp  RootGridIO.cpp  RootGridObject.cpp  RootGridParticle.cpp
src/MPI/: Communicator.cpp  Environment.cpp
src/Misc/: Environment.cpp  IO.cpp  Initialize.cpp  MPIWrapper.cpp  Normalizer.cpp  Utils.cpp
src/Particle/: AmbientParticleType.cpp  BeamParticleType.cpp  ParticleType.cpp  PhotoElectronParticleType.cpp  Position.cpp  SecondaryParticleType.cpp  particle.cpp  particle_type.cpp
src/Spacecraft/: Force.cpp  Incident.cpp  ObjectUtils.cpp  SecondaryEmission.cpp  Spacecraft.cpp  SpacecraftMaterialPropertyList.cpp
test/: CMakeLists.txt  test_fixture.cpp
test/Field/: CMakeLists.txt  field_test.cpp
test/Grid/: CMakeLists.txt  grid_test.cpp
test/Particle/: CMakeLists.txt  particle_test.cpp
test/include/: test_tdpic.h
